--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.18.2",
     "bulma": "^0.6.1",
     "core-js": "^2.4.1",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mysql": "^2.15.0",
     "rxjs": "^5.5.2",
