--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.0.1",
     "@angular/platform-browser-dynamic": "^5.0.1",
     "@angular/router": "^5.0.1",
+    "angular4-social-login": "^1.0.13",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "bulma": "^0.6.1",
